--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,8 @@ before_install:
   # Travis logs will show a WARNING regarding the "gdf_modis" does not exist, and Error regarding SCHEMA topology
   # These are to be expected and can be safely ignored. It is a consequence of restoring a backup after creating an empty
   # database that ensures the database setup scripts are working
-  - ./gdf_db_setup.sh
+  - ./gdf_db_setup.sh localhost gdf_empty
+  - psql -f gdf_database/example-users.sql
   - ./create_db_from_backup.sh gdf_test_modis ../gdf_modis_20150710.backup
   - ./create_db_from_backup.sh gdf_test_ls ../gdf_landsat_20150710.backup
   - cd ..
