--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,7 @@ before_install:
   - createdb agdcintegration
 
 install:
-  - export CPLUS_INCLUDE_PATH="/usr/include/gdal"
-  - export C_INCLUDE_PATH="/usr/include/gdal"
-  - pip install -r requirements.txt coveralls gdal==1.10.0
+  - pip install -r requirements.txt coveralls
   - python setup.py install
 
 script:
